--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- custom css -->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <!-- utils -->
-    <link rel="stylesheet" href="../css/utils.css">
+    <link rel="stylesheet" href="/css/utils.css">
     <title>Document</title>
 </head>
 
