--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
     <main class="home">
         <header class="navbar">
             <nav class="logo">
-                <img src="/logo.png" alt="logo">
+                <img src="../img/logo.png" alt="logo">
             </nav>
             <nav class="link">
                 <ul>
@@ -369,10 +369,10 @@
                     <h2>Welcome</h2>
                     <h3>to my website</h3>
                 </nav>
-                <nav class="img"><img class="hero" src="logo.png" alt=""></nav>
+                <nav class="img"><img class="hero" src="../img/logo.png" alt=""></nav>
             </div>
             <div id="hero2">
-                <nav class="img"><img class="hero" src="logo.png" alt=""></nav>
+                <nav class="img"><img class="hero" src="../img/logo.png" alt=""></nav>
                 <nav class="text">
                     <h2>Welcome</h2>
                     <h3>to my website</h3>
@@ -381,7 +381,7 @@
         </section>
     </main>
     <section id="services" class="services">
-        <nav class="service-img"><img src="logo.png" alt=""></nav>
+        <nav class="service-img"><img src="../img/logo.png" alt=""></nav>
         <nav class="text">
             <h2>Website Designing</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores quos odit ut minima doloremque. Et,
