--- a/index.html
+++ b/index.html
@@ -369,10 +369,10 @@
                     <h2>Welcome</h2>
                     <h3>to my website</h3>
                 </nav>
-                <nav class="img"><img class="hero" src="../img/logo.png" alt=""></nav>
+                <nav class="img"><img class="hero" src="img/logo.png" alt=""></nav>
             </div>
             <div id="hero2">
-                <nav class="img"><img class="hero" src="../img/logo.png" alt=""></nav>
+                <nav class="img"><img class="hero" src="img/logo.png" alt=""></nav>
                 <nav class="text">
                     <h2>Welcome</h2>
                     <h3>to my website</h3>
@@ -381,7 +381,7 @@
         </section>
     </main>
     <section id="services" class="services">
-        <nav class="service-img"><img src="../img/logo.png" alt=""></nav>
+        <nav class="service-img"><img src="img/logo.png" alt=""></nav>
         <nav class="text">
             <h2>Website Designing</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores quos odit ut minima doloremque. Et,
@@ -393,7 +393,7 @@
     </section>
     <section id="about" class="About">
         <nav class="About-img">
-            <img src="../img/BACKGROUND.jpg" alt="">
+            <img src="img/BACKGROUND.jpg" alt="">
         </nav>
         <nav class="About-text">
             <h2>About Us</h2>
@@ -409,7 +409,7 @@
     </main>
     <section id="contact" class="contactus">
         <nav class="logo">
-            <img src="../img/logo.png" alt="">
+            <img src="img/logo.png" alt="">
         </nav>
         <nav class="sign-up">
             <form class="contact-fill" action="contact.html">
@@ -425,7 +425,7 @@
 
     <footer>
         <nav class="footer-logo logo">
-            <img src="../img/logo.png" alt="">
+            <img src="img/logo.png" alt="">
         </nav>
         <nav class="footer-text">
             <h4>&copy; copyright by Mudabbir.com</h4>
